# archetype-proxy-server

./: Cargo.toml  README.md  archetype-proxy.toml
deploy/: Dockerfile  Dockerfile.production  README.md  docker-compose.yml  server-config.toml  smoke-test.sh
deploy/gateway-api/: README.md  backendlbpolicy.yaml  httproute.yaml
deploy/haproxy/: haproxy.cfg
deploy/k8s/: deployment.yaml
deploy/nginx/: nginx.conf
packaging/arch/: PKGBUILD  archetype-proxy-server.service
src/: acme.rs  attestation.rs  cli.rs  config.rs  envelope.rs  lib.rs  main.rs  metrics.rs  proxy.rs  tls.rs  ws.rs
src/discovery/: docker.rs  k8s.rs  labels.rs  mod.rs
tests/: proxy_e2e.rs  registry_eviction.rs  tls_listener.rs  tpm_handshake_e2e.rs  tpm_swtpm.rs
tests/frame_helper/: mod.rs
