[package]
name = "archetype-proxy-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
openhttpa-proto       = { git = "https://github.com/archetype-linux/openhttpa-rs", branch = "tpm-attestation" }
openhttpa-crypto      = { git = "https://github.com/archetype-linux/openhttpa-rs", branch = "tpm-attestation" }
openhttpa-headers     = { git = "https://github.com/archetype-linux/openhttpa-rs", branch = "tpm-attestation" }
openhttpa-core        = { git = "https://github.com/archetype-linux/openhttpa-rs", branch = "tpm-attestation" }
openhttpa-tee         = { git = "https://github.com/archetype-linux/openhttpa-rs", branch = "tpm-attestation" }
openhttpa-attestation = { git = "https://github.com/archetype-linux/openhttpa-rs", branch = "tpm-attestation" }
openhttpa-transport   = { git = "https://github.com/archetype-linux/openhttpa-rs", branch = "tpm-attestation" }
openhttpa-server      = { git = "https://github.com/archetype-linux/openhttpa-rs", branch = "tpm-attestation" }
openhttpa-client      = { git = "https://github.com/archetype-linux/openhttpa-rs", branch = "tpm-attestation" }

tokio              = { version = "1", features = ["full"] }
axum               = { version = "0.8", features = ["ws", "query"] }
# `rustls-tls-webpki-roots-no-provider` gives webpki roots WITHOUT pulling
# rustls' `ring` crypto feature (task #11/#12 aws-lc-rs-only goal). The active
# rustls CryptoProvider is installed as the process default in main().
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots-no-provider", "stream"] }
clap               = { version = "4", features = ["derive"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
hex                = "0.4"
toml               = "0.8"
thiserror          = "2"
http               = "1"
bytes              = "1"
futures-util       = "0.3"
hmac               = "0.13"
sha2               = "0.11"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
arc-swap           = "1"
async-trait        = "0.1"
bollard            = "0.21"
# Attested WebSocket passthrough (task #14): dial the upstream ws:// backend.
# Pinned to the version already in the tree (transitive via axum) so this adds
# no new resolved crate. `connect`/`handshake` only (no TLS feature) -- the
# upstream is dialed over plaintext ws:// (TLS terminates at the upstream's own
# ingress, mirroring the reqwest proxy path).
tokio-tungstenite  = { version = "0.29", default-features = false, features = ["connect", "handshake"] }
# Public-facing transport TLS (task #11). `tls-rustls-no-provider` means
# axum-server does NOT force a rustls crypto provider; we install aws-lc-rs
# explicitly in src/tls.rs (the tree already pins aws-lc-rs; `ring` is only
# pulled transitively for cert-path verification, not as our provider).
axum-server        = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
rustls             = { version = "0.23", default-features = false, features = ["std", "aws_lc_rs"] }
rustls-pemfile     = "2"
# ACME automatic TLS (task #12). instant-acme is a low-level ACME client whose
# ChallengeType covers Http01, Dns01, AND TlsAlpn01. `aws-lc-rs` feature keeps
# the crypto stack consistent with task #11 (no `ring` as a second provider).
# `hyper-rustls` is the transport; we disable its default `ring` and select the
# aws-lc-rs path via instant-acme's own `aws-lc-rs` feature.
instant-acme       = { version = "0.8.5", default-features = false, features = ["aws-lc-rs", "hyper-rustls"] }
rcgen              = { version = "0.14", features = ["aws_lc_rs"], default-features = false }
x509-parser        = "0.18"
time               = "0.3"

# Kubernetes discovery (task #15). OPTIONAL + feature-gated (`kubernetes`) so the
# DEFAULT build does NOT pull the heavy kube + k8s-openapi tree and stays lean +
# CI-fast (mirrors how the real-TEE providers are gated). kube's default feature
# set pulls `ring` as the rustls crypto provider; we disable defaults and select
# `rustls-tls` + `aws-lc-rs` to keep the single-provider (aws-lc-rs) posture from
# tasks #11/#12 and avoid re-introducing `ring`. `runtime` gives the watcher.
kube = { version = "4", optional = true, default-features = false, features = ["client", "config", "rustls-tls", "aws-lc-rs", "runtime"] }
k8s-openapi = { version = "0.28", optional = true, default-features = false, features = ["latest"] }

[dev-dependencies]
rcgen              = { version = "0.14", features = ["aws_lc_rs"], default-features = false }
http-body-util     = "0.1"

# Real-TEE provider/verifier selection (task #7). The DEFAULT build is
# mock-only and compiles with NO TEE hardware/SDKs (CI-buildable). Each feature
# below pulls in the matching openhttpa crate feature, which requires the
# corresponding hardware SDK / system library at build+run time. Build for a
# given platform with e.g. `cargo build --release --features tdx,maa`.
[features]
default   = []
# Kubernetes service-discovery watcher (task #15). OFF by default so the lean
# CI build skips the kube + k8s-openapi dependency tree. Enable with
# `cargo build --features kubernetes`.
kubernetes = ["dep:kube", "dep:k8s-openapi"]
tdx       = ["openhttpa-tee/tdx"]
sev_snp   = ["openhttpa-tee/sev_snp"]
sgx       = ["openhttpa-tee/sgx"]
trustzone = ["openhttpa-tee/trustzone"]
aws_nitro = ["openhttpa-tee/aws_nitro"]
maa       = ["openhttpa-attestation/maa"]
ita       = ["openhttpa-attestation/ita"]
amd_snp   = ["openhttpa-attestation/amd_snp"]
# TPM 2.0 measured-boot: real quote provider (openhttpa-tee) + fail-closed
# verifier (openhttpa-attestation). Pulls tss-esapi -> system tpm2-tss at build
# time. Integration test needs swtpm (see tests/tpm_swtpm.rs).
tpm       = ["openhttpa-attestation/tpm", "openhttpa-tee/tpm"]

[lib]
name = "archetype_proxy_server"
path = "src/lib.rs"

[[bin]]
name = "archetype-proxy-server"
path = "src/main.rs"
